--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -144,6 +144,8 @@ en:
     infrastructure:     'Infrastructure'
     genre:              'Genre'
     stackname:          'Stack Name'
+    physical_id:        'Instance ID'
+    date:               'Date'
     region:             'Region'
     keypair:            'KeyPair Name'
     creation_time:      'Creation Time'
