--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -193,6 +193,7 @@ ja:
       empty-list:                  'インフラストラクチャのリストは空です.'
       loading-list:                'インフラストラクチャのロード中です...'
       invalid_keypair:             'キーペアが無効です! キーペアファイルを確認してください。'
+      modifying:                   '15秒でインスタンス..更新を変更します。'
 
   security_groups:
       title:        'セキュリティグループ'
