Unify the transcription to `パラメーター`

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -128,10 +128,10 @@ ja:
       empty-list:         'プロジェクトは空です。'
 
   project_parameters:
-    title: 'パラーメター'
+    title: 'パラメーター'
     description_html: 'プロジェクトごとに使用できるパラメーターを設定できます。<br />
                   ここで設定したパラメーターは、CloudFormationやCookの際に使用できます。'
-    usage: '${NAME}のようにして、登録したパラメータを使用可能です'
+    usage: '${NAME}のようにして、登録したパラメーターを使用可能です'
     btn:
       remove:   '削除'
       unremove: '削除取消'
