--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,6 +127,8 @@ en:
       deleted:            'Project was successfully deleted.'
       cant_delete_system: 'Unable to delete project for this system.'
       empty-list:         'No Project found.'
+      delete_project:     'Are you sure you want to delete this client?'
+
 
   project_parameters:
     title: 'Parameter'
