--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,7 +127,7 @@ en:
       deleted:            'Project was successfully deleted.'
       cant_delete_system: 'Unable to delete project for this system.'
       empty-list:         'No Project found.'
-      delete_project:     'Are you sure you want to delete this client?'
+      delete_project:     'Are you sure you want to delete this project?'
 
 
   project_parameters:
