--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -105,7 +105,7 @@ en:
       no_permission:      'Permission denied to to utilize the "Clients" feature'
       created:            'Client was successfully created.'
       updated:            'Client was successfully updated.'
-      deleted:            'Client was successfully deleted.'
+      deleted:            'Client "%{name}" was successfully deleted.'
       cant_change_system: 'Unable to change client for this system.'
       delete_client:      'Are you sure you want to delete this client?'
 
