--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -312,6 +312,7 @@ en:
       description:            'Dish is a preset to configure EC2 Instance.'
       no_serverspec_selected: 'No serverspecs selected.'
       empty-list:             'No dishes found.'
+      delete_dish:            'Are you sure you want to delete this Dish?'
 
 
   serverspecs:
@@ -342,6 +343,7 @@ en:
       pending:   'Serverspec for %{physical_id} is successfully finished. Pending specs: %{pending_specs}'
       failure:   'Serverspec for %{physical_id} has failed. failure specs: %{failure_specs}'
       generated: 'Serverspec is successfully generated.'
+      delete_serverspec: 'Are you sure you want to delete this Serverspec?'
       empty-results: 'No results found.'
       auto_generated_enabled_html:  '<small>This Serverspec was created automatically by "<em>serverspec-handler</em>" cookbook.</small>'
       auto_generated_disabled_html: '<small>This option is available only when runlist includes "<em>serverspec-handler</em>" cookbook.</small>'
@@ -403,6 +405,7 @@ en:
       deleted:         'Template was successfully deleted.'
       updating:        'Updating stack'
       creating:        'Creating stack'
+      delete_cf_template: 'Are you sure you want to delete this Cf_template?'
 
 
   template_builder:
