--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -499,7 +499,7 @@ en:
       role:                  'Master users can see all the infrastructures. Admin users can change assigned infrastructures.'
       created:               'An account was successfully created.'
       updated:               'An account was successfully updated.'
-      deleted:               'An account was successfully deleted.'
+      deleted:               '"%{name}" was successfully deleted.'
       synced:                'All of accounts was successfully synchronized with Zabbix Server.'
       only_master:           'The feature of User Management is only permitted to Master users.'
       confirm_sync_zabbix:   'Do you want to synchronize users with Zabbix Server?'
@@ -508,6 +508,7 @@ en:
       mfa_used:              'MFA is already used.'
       mfa_start_description: 'Enter secret key to MFA device. Or Scan QR code.'
       use_stop_mfa:          'If save changes, use stop MFA.'
+      delete_user:           'Are you sure you want to delete this User?'
 
 
   chef_servers:
