--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -107,7 +107,7 @@ ja:
       updated:            '顧客が正常に更新されました'
       deleted:            '顧客が "%{name}" 正常に削除されました'
       cant_change_system: 'システム用の顧客は変更できません'
-      delete_client:     'あなたはこのクライアントを削除してもよろしいですか？'
+      delete_client:     'この顧客を削除してもよろしいですか？'
 
   projects:
     project:           '案件'
@@ -126,7 +126,7 @@ ja:
       deleted:            '案件 "%{name}" が正常に削除されました'
       cant_delete_system: 'システム用のプロジェクトは削除できません'
       empty-list:         'プロジェクトは空です。'
-      delete_project:     'あなたはこのプロジェクトを削除してもよろしいですか？'
+      delete_project:     'この案件を削除してもよろしいですか？'
 
   project_parameters:
     title: 'パラメーター'
@@ -309,7 +309,7 @@ ja:
       deleted:                'ディッシュが正常に削除されました'
       description:            'ディッシュは EC2 インスタンスの構成を定義するものです。'
       no_serverspec_selected: 'Serverspec が選択されていません'
-      delete_dish:            'あなたはこの皿を削除してもよろしいですか？'
+      delete_dish:            'このディッシュを削除してもよろしいですか？'
       empty-list:             'ディッシュのリストが空です'
 
 
@@ -342,7 +342,7 @@ ja:
       failure:   '%{physical_id} の Serverspec が失敗しました。 失敗したスペック: %{failure_specs}'
       generated: 'Serverspec は正常に作成されました。'
       empty-results: '結果が見つかりませんでした。'
-      delete_serverspec: 'あなたはこのServerspecを削除してもよろしいですか？'
+      delete_serverspec: 'この Serverspec を削除してもよろしいですか？'
       auto_generated_enabled_html:  '<small>この Serverspec は Cookbook "<em>serverspec-handler</em>" により自動生成されます</small>'
       auto_generated_disabled_html: '<small>このオプションは Cookbook "<em>serverspec-handler</em>" が Runlist に含まれている場合に使用できます</small>'
     generator:
@@ -403,7 +403,7 @@ ja:
       deleted:         'テンプレートが正常に削除されました'
       updating:        'スタックの更新を開始しました'
       creating:        'スタックの作成を開始しました'
-      delete_cf_template: 'あなたはこのCf_templateを削除してもよろしいですか？'
+      delete_cf_template: 'このテンプレートを削除してもよろしいですか？'
 
 
   template_builder:
@@ -417,7 +417,8 @@ ja:
 
   monitoring:
     title:                '監視'
-    config:               '監視項目の設定'
+    show:                 '表示'
+    configuration:        '設定'
     select:               '監視項目の選択'
     trigger:              '閾値の設定'
     explanation_triggers: 'トリガーの説明'
@@ -506,7 +507,7 @@ ja:
       mfa_used:              'MFA は既に使用されています。'
       mfa_start_description: 'MFA デバイスに秘密鍵を入力するか、QRコードを読み取ってください。'
       use_stop_mfa:          '変更を保存すると、MFA の使用を停止します。'
-      delete_user:           'あなたはこのユーザーを削除してもよろしいですか？'
+      delete_user:           'このユーザーを削除してもよろしいですか？'
 
 
   chef_servers:
