--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -544,6 +544,8 @@ ja:
       stop:           'Zabbix Server を停止しています...'
       not_running:    'Zabbix Server が起動していません'
       connrefused:    'Zabbix Server に接続できませんでした。Zabbix Server の設定を確認してください。'
+      created:        'Zabbixサーバが正常に作成されました。'
+      updated:        'Zabbixサーバが正常に更新されました'
 
   ec2_instances:
     description:       '詳細'
