--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -571,6 +571,7 @@ ja:
     none:              'なし'
     ec2_instance:      'EC2インスタンス'
     create_volume:     'ボリュームの作成'
+    detach_volume:     'ボリュームのデタッチ'
     msg:
       start_ec2:             'EC2 インスタンスの起動が開始されました'
       stop_ec2:              'EC2 インスタンスの停止が開始されました'
@@ -594,6 +595,7 @@ ja:
       security_groups:  'インスタンスに割り当てられるセキュリティグループです。
                         セキュリティグループは、インスタンスのネットワーク通信を制限するファイアウォールルールのコレクションです。
                         特定のグループのルールを参照するには、[ルールの表示] をクリックします。'
+      detach_volume:         '%{physical_id} から %{volume_id} をデタッチします。本当によろしいですか?'
     btn:
       register:   'インスタンスを登録'
       deregister: 'インスタンスの登録を解除'
