Enable to create volume with parameters

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,6 +46,7 @@ en:
       update:          'Update'
     msg:
       loading:       ' Loading...'
+      creating:      ' Creating...'
       empty:         '%{name} is empty'
       no_permission: 'Permission denied'
       key_droppable: |
@@ -574,6 +575,8 @@ en:
     ec2_instance:      'EC2 Instance'
     create_volume:     'Create Volume'
     detach_volume:     'Detach Volume'
+    volume_type:       'Volume Type'
+    encryption:        'Encryption'
     msg:
       start_ec2:             'Start to turn on the power EC2 instance.'
       stop_ec2:              'Start to turn off the power EC2 instance.'
@@ -598,6 +601,8 @@ en:
                          A security group is a collection of firewall rules that restrict the network traffic for the instance.
                          Click View rules to see the rules for the specific group.'
       detach_volume:         'Are you sure you want to detach %{volume_id} from %{physical_id}?'
+      volume_detached:       '%{volume_id} has detached.'
+      creating_volume:       'Creating volume <code>%{volume_id}</code> has started.'
     btn:
       register:   'Register to ELB'
       deregister: 'Deregister from ELB'
@@ -618,7 +623,12 @@ en:
       delete_certificate: 'Do you want to delete of certificate?'
       detach:   'Are you sure you want to detach this EC2 instance from SkyHopper?'
       terminate:   'Are you sure you want to terminate this EC2 instance?'
-
+    ebs_volume_types:
+      gp2:      'General Purpose SSD'
+      io1:      'Provisioned IOPS SSD'
+      st1:      'Throughput Optimized HDD'
+      sc1:      'Cold HDD'
+      standard: 'EBS Magnetic'
 
   ec2_private_keys:
     msg:
@@ -646,13 +656,14 @@ en:
       deleted:    'KeyPair "%{name}" has been deleted successfully.'
 
   snapshots:
-    snapshots:          'Snapshots'
+    snapshots:         'Snapshots'
     create_snapshot:   'Create Snapshot'
     delete_snapshot:   'Delete Snapshot'
     schedule_snapshot: 'Schedule Snapshot Creation'
     list_of_snapshots: 'List of Snapshots'
     retention_policy:  'Retention Policy'
     snapshots_to_keep: 'Snapshots to keep'
+    snapshot_id:       'Snapshot ID'
     msg:
       no_snapshots:    'You do not have any snapshots for this volume'
       create_snapshot: 'Are you sure you want to create snapshot of %{volume_id} ?'
