Chef create button and command automation for uploading cookbooks and copying chef keys

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -525,7 +525,8 @@ en:
       download_chef:  'Downloading Chef Server packages...'
       install_chef:   'Installing Chef Server...'
       setting_chef:   'Setting up Chef Server...'
-      complete:       'Chef Server was successfully constructed. Execute `cp -r ~/skyhopper/tmp/chef ~/.chef` and restart SkyHopper.'
+      complete:       'Chef Server was successfully constructed.'
+      setting_up:     'Setting up other necessary commands.'
       confirm_start:  'Do you want to start Chef Server?'
       confirm_stop:   'Do you want to stop Chef Server?'
       start:          'Stopping Chef Server...'
