--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -74,28 +74,47 @@ ja:
     chef_server:       'Chef Server'
 
     msg:
-      created:           'アプリケーションは正常に設定されました'
+      created:           'SkyHopperのセットアップが完了しました。システムにログインするためのユーザーアカウントを作成して次のステップにリダイレクトするために行わボタンを押してください。'
       show:              'SkyHopper へようこそ!'
       log_directory:     'データベースに出力できなかったログを保存するディレクトリ'
       app_directory:     'SkyHopperのインストールパス。それはすでに設定されています。'
       aws_description:   |
-        SkyHopper では、Chef Server や Zabbix Server などを AWS 上に構築します。
-        ここで設定された秘密鍵などは SkyHopper システムのみが使用し、ユーザーが作成するインフラには使用されません。
+        SkyHopperはシェフのサーバーとAWS上のZabbixサーバを構築します。
+        あなたが入力したAWSの以下の設定は、シェフのサーバーとのZabbixサーバを構築するために使用されています。
       access_key:        'SkyHopper のシステムが使用する AWS の Access Key ID（個別のインフラの管理には使用されません）'
       secret_access_key: 'SkyHopper のシステムが使用する AWS の Secret Access Key（個別のインフラの管理には使用されません）'
       aws_region:        'SkyHopper のシステムが使用する AWS のリージョン'
       aws_keypair:       'SkyHopper のシステムが使用する SSH鍵（上記の APIキー に紐付けられた EC2 のコンソールから登録した鍵ペアを指定）'
       zabbix_updated:    'Zabbix の設定は正常に更新されました。'
       eip_limit_error:   'EIP を確保することが出来ません。EIP の個数制限を確認して下さい。'
+      insert_key:        '最初のAWSキーを入力し、地域を選択してください。'
     title:
       show:   'SkyHopper へようこそ'
       setup:  'SkyHopper のセットアップ'
       system: 'システムの設定'
       chef:   'Chef Server の設定'
       aws:    'AWS の設定'
+      new_keypair: '新しい鍵ペアを作成'
+      exist_keypair: '既存の鍵ペアを使用します'
+      drop_file:     'ファイルをここにドロップするか、選択する]をクリックします'
+      pem_file:      'AWSから作成された.pemファイルでなければなりません'
     btn:
       create_chefserver: 'Chef Server の構築'
       done:              '完了'
+      create_download:   '作成＆ダウンロード'
+    intro:
+      aws_keys:   |
+        AWSのアクセスと秘密鍵は、シェフ＆のZabbixサーバを構築するために、あなたのインフラストラクチャを管理するためにSkyHopperを有効にする必要があります。
+        あなたはまだAWS Securtyの資格を持っていない場合は、このリンクに従ってください。
+        <a href="http://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html" target="_blank"> あなたのAWSアカウントのアクセスキーを管理します </a>.
+      aws_region: |
+        SkyHopperインスタンスをデプロイするためのセキュリティcredentailsを設定した後、AWSリージョンを選択してください。
+        このための目的は、アプリケーション内のデータ遅延を低減することです。
+      aws_keypair: |
+        SkyHopperがあなたのインスタンスへのアクセスを許可するには、鍵のペアを作成するには、インスタンスを起動したときに鍵ペアの名前を指定する必要があります。
+        この場合、あなたはすでに鍵ペアを持っている場合は、 「使用既存のキーペア」を選択し、選択またはドロップボックスにファイルをドラッグすることができます。
+        しかし、あなたはまた、あなたが入力した入力したAWSのセキュリティ資格情報を使用して、新しい鍵ペアを作成することができますし、選択してオプション「新しいキーペア作成」を。
+      chef_button: '上記の処理の後、あなたは今インストールを開始するためにシェフのサーバーの作成]ボタンを押すことができます。'
 
   clients:
     client: '顧客'
