CFTemplates multiple selection and export these

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,6 +44,8 @@ en:
       next:            'Next'
       delete:          'Delete'
       update:          'Update'
+      import:          'Import'
+      export:          'Export'
     msg:
       loading:       ' Loading...'
       creating:      ' Creating...'
