--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -44,6 +44,8 @@ ja:
       next:            '次へ'
       delete:          '削除します'
       update:          '更新'
+      import:          'インポート'
+      export:          'エクスポート'
     msg:
       loading:       ' 読み込み中...'
       creating:      ' 作成中...'
