--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,7 @@ en:
     password:      'Password'
     please_select: 'Select one'
     not_set:       'Not set'
+    selected:      'Selected'
     btn:
       architecture:    'Architecture'
       settings:        'Settings'
@@ -46,6 +47,8 @@ en:
       update:          'Update'
       import:          'Import'
       export:          'Export'
+      all:             'All'
+      multiple_select: 'Multiple Select'
     msg:
       loading:       ' Loading...'
       creating:      ' Creating...'
