--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -418,6 +418,7 @@ en:
       updating:        'Updating stack'
       creating:        'Creating stack'
       delete_cf_template: 'Are you sure you want to delete this Cf_template?'
+      confirm_export:  ' Are you sure you want to export the following templates?'
 
 
   template_builder:
